Mobile touch hover effect test 3

--- a/css/styles.css
+++ b/css/styles.css
@@ -342,9 +342,12 @@ html {
 }
 .home-page .portfolio .portfolio_work .pi .feature-overlay .feature-info div a:hover,
 .home-page .portfolio .portfolio_work .pi .feature-overlay .feature_background div a:hover,
-.home-page .portfolio .portfolio_work .pi .feature-overlay .feature-info div a.hover_effect,
-.home-page .portfolio .portfolio_work .pi .feature-overlay .feature_background div a.hover_effect {
+.home-page .portfolio .portfolio_work .pi .feature-overlay .feature-info div a:active,
+.home-page .portfolio .portfolio_work .pi .feature-overlay .feature_background div a:active {
   text-decoration: underline;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
 }
 .home-page .portfolio .portfolio_work .pi .feature-overlay .feature_background.bw {
   background: #e22016;
@@ -375,34 +378,37 @@ html {
 }
 .home-page .portfolio .portfolio_work .pi:hover,
 .home-page .portfolio .portfolio_work .pi:focus,
-.home-page .portfolio .portfolio_work .pi.hover_effect {
+.home-page .portfolio .portfolio_work .pi:active {
   text-decoration: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
 }
 .home-page .portfolio .portfolio_work .pi:hover .feature-box-overlay,
 .home-page .portfolio .portfolio_work .pi:focus .feature-box-overlay,
-.home-page .portfolio .portfolio_work .pi.hover_effect .feature-box-overlay {
+.home-page .portfolio .portfolio_work .pi:active .feature-box-overlay {
   background: rgba(0, 0, 0, 0.1);
 }
 .home-page .portfolio .portfolio_work .pi:hover .feature_background,
 .home-page .portfolio .portfolio_work .pi:focus .feature_background,
-.home-page .portfolio .portfolio_work .pi.hover_effect .feature_background {
+.home-page .portfolio .portfolio_work .pi:active .feature_background {
   bottom: 0;
   opacity: 0.7;
 }
 .home-page .portfolio .portfolio_work .pi:hover .feature-info,
 .home-page .portfolio .portfolio_work .pi:focus .feature-info,
-.home-page .portfolio .portfolio_work .pi.hover_effect .feature-info {
+.home-page .portfolio .portfolio_work .pi:active .feature-info {
   bottom: 200px;
 }
 .home-page .portfolio .portfolio_work .pi:hover img,
 .home-page .portfolio .portfolio_work .pi:focus img,
-.home-page .portfolio .portfolio_work .pi.hover_effect img {
+.home-page .portfolio .portfolio_work .pi:active img {
   -webkit-filter: grayscale(0);
   filter: grayscale(0);
 }
 .home-page .portfolio .portfolio_work .pi:hover img.dark_image,
 .home-page .portfolio .portfolio_work .pi:focus img.dark_image,
-.home-page .portfolio .portfolio_work .pi.hover_effect img.dark_image {
+.home-page .portfolio .portfolio_work .pi:active img.dark_image {
   opacity: 1;
 }
 .home-page .footer {
@@ -563,16 +569,22 @@ html {
     color: #000;
   }
   nav.affix-top a:hover,
-  nav.affix-top a.hover_effect {
+  nav.affix-top a:active {
     color: #808080;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    -webkit-user-select: none;
+    -webkit-touch-callout: none;
   }
   nav.affix-top .navbar-brand {
     font-size: 30px;
     color: #000;
   }
   nav.affix-top .navbar-brand:hover,
-  nav.affix-top .navbar-brand.hover_effect {
+  nav.affix-top .navbar-brand:active {
     color: #808080;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    -webkit-user-select: none;
+    -webkit-touch-callout: none;
   }
   nav.affix-top #navbar {
     display: none !important;
