--- a/css/styles.less
+++ b/css/styles.less
@@ -212,8 +212,11 @@ body, html {
                                 color: #FFF;
                                 text-decoration: none;
 
-                                &:hover, &.hover_effect {
+                                &:hover, &:active {
                                     text-decoration: underline;
+                                    -webkit-tap-highlight-color: rgba(0,0,0,0);
+                                    -webkit-user-select: none;
+                                    -webkit-touch-callout: none;
                                 }
                             }
                         }
@@ -253,8 +256,11 @@ body, html {
                     }
                 }
 
-                &:hover, &:focus, &.hover_effect {
+                &:hover, &:focus, &:active {
                     text-decoration: none;
+                    -webkit-tap-highlight-color: rgba(0,0,0,0);
+                    -webkit-user-select: none;
+                    -webkit-touch-callout: none;
 
                     .feature-box-overlay {
                         background: rgba(0,0,0,0.1);
@@ -475,8 +481,11 @@ body, html {
             a {
                 color: #000;
 
-                &:hover, &.hover_effect {
+                &:hover, &:active {
                     color: #808080;
+                    -webkit-tap-highlight-color: rgba(0,0,0,0);
+                    -webkit-user-select: none;
+                    -webkit-touch-callout: none;
                 }
             }
 
@@ -484,8 +493,11 @@ body, html {
                 font-size: 30px;
                 color: #000;
 
-                &:hover, &.hover_effect {
+                &:hover, &:active {
                     color: #808080;
+                    -webkit-tap-highlight-color: rgba(0,0,0,0);
+                    -webkit-user-select: none;
+                    -webkit-touch-callout: none;
                 }
             }
 
