--- a/css/styles.less
+++ b/css/styles.less
@@ -212,7 +212,7 @@ body, html {
                                 color: #FFF;
                                 text-decoration: none;
 
-                                &:hover, &:active {
+                                &:hover {
                                     text-decoration: underline;
                                     -webkit-tap-highlight-color: rgba(0,0,0,0);
                                     -webkit-user-select: none;
@@ -256,7 +256,7 @@ body, html {
                     }
                 }
 
-                &:hover, &:focus, &:active {
+                &:hover, &:focus {
                     text-decoration: none;
                     -webkit-tap-highlight-color: rgba(0,0,0,0);
                     -webkit-user-select: none;
@@ -481,7 +481,7 @@ body, html {
             a {
                 color: #000;
 
-                &:hover, &:active {
+                &:hover {
                     color: #808080;
                     -webkit-tap-highlight-color: rgba(0,0,0,0);
                     -webkit-user-select: none;
@@ -493,7 +493,7 @@ body, html {
                 font-size: 30px;
                 color: #000;
 
-                &:hover, &:active {
+                &:hover {
                     color: #808080;
                     -webkit-tap-highlight-color: rgba(0,0,0,0);
                     -webkit-user-select: none;
